--- a/Spideyweb.Umbraco.SimpleTimePicker/Spideyweb.Umbraco.SimpleTimePicker.csproj
+++ b/Spideyweb.Umbraco.SimpleTimePicker/Spideyweb.Umbraco.SimpleTimePicker.csproj
@@ -70,6 +70,7 @@
     <Content Include="App_Plugins\Spideyweb.Umbraco.SimpleTimePicker\css\simpletimepicker.css" />
     <Content Include="App_Plugins\Spideyweb.Umbraco.SimpleTimePicker\js\simpletimepicker.controller.js" />
     <Content Include="App_Plugins\Spideyweb.Umbraco.SimpleTimePicker\views\editor.html" />
+    <Content Include="nuget.exe" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -78,7 +79,6 @@
   <ItemGroup>
     <Content Include="App_Plugins\Spideyweb.Umbraco.SimpleTimePicker\package.manifest" />
     <None Include="packages.config" />
-    <Content Include="Readme.md" />
     <Content Include="SimpleTimePicker.nuspec" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
